--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "grsu-front",
+  "homepage": "https://jeka0.github.io/Front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,8 @@
     "validator": "^13.7.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
+  "publishConfig": {
+    "jeka0:registry": "https://npm.pkg.github.com"
   }
 }
